SENTRY-822: OutOfMemory in hive e2e test (Colin Ma, Reviewed by Dapeng Sun)